--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Borra Comer</title>
   <link href="./assets/css/boracomer.css" rel="stylesheet">
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="./assets/img/mini-logo.png">
+  <link id="tabIcon" rel="icon" type="image/x-icon" href="./assets/img/emptyPhoto.svg">
 </head>
 <body>
      <div id="divMain">
@@ -16,6 +16,7 @@
 </body>
 <script type="text/javascript" src="./assets/js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="./assets/js/jquery.inputmask.min.js"></script>
+<script type="text/javascript" src="./assets/js/moment-with-locales.min.js"></script>
 <script type="text/javascript" src="./assets/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="./assets/js/dimension.js"></script>
 <script type="text/javascript" src="./assets/js/axios.min.js"></script>
